Graças a Deus consegui configurar corretamente o MySql

--- a/SalesWebMvc/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/SalesWebMvc/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMvcContext": "Server=localhost;userid=luteciorv;password=260200rj;database=saleswebmvcappdb"
+  }
 }
